# rossa

./: pyproject.toml  run_tests.py
src/rossa/: parameters.py  rossa.py
tests/: conftest.py  test_rossa_core.py
